# small

./: ChangeLog.md  small.cabal
main/: Main.hs
src/Algo/: DebPho.hs  Elaborate.hs
src/Control/Applicative/: Effect.hs  Unify.hs
src/Data/Constraint/: Atomic.hs  Simple.hs
src/Data/Functor/: TypeCheck.hs
src/Language/: Deb.hs  Monotype.hs  Pho.hs  Small.hs
src/Language/Small/: Expr.hs  TC.hs
