name:                small
version:             0.0.1
synopsis:            A small ML
-- description:         
homepage:            https://github.com/lambdageek/small
license:             BSD3
license-file:        LICENSE
author:              Aleksey Kliger
maintainer:          aleksey@lambdageek.org
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , mtl >= 2.2.0.1
                     , transformers >= 0.4.0.0
                     , lens >= 4.13
                     , unbound-generics >= 0.3.1
                     , profunctors >= 5
                     , free >= 4.12
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  exposed-modules:     Language.Small
  default-extensions:  MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, DeriveGeneric
  -- other-modules:       
  -- other-extensions:    

executable small
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , small
  hs-source-dirs:      main
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-extensions:  MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, DeriveGeneric
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/lambdageek/small.git
